--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
+        "laravel-shift/blueprint": "^2.11",
         "laravel/breeze": "^2.3",
         "laravel/dusk": "^8.2",
         "laravel/pail": "^1.1",
